# RAG-for-Clinical-Nutritions

./: .gitignore  Makefile  README.md  analisis.ipynb  evaluate_rag.py  evaluate_rag_combined.py  main.py  pyproject.toml  requirements.txt  rerun_ragas_nan_rows.py
archive/: evaluate_rag.py  evalute_with_ragas.py
results/: rag_combined_results_llama_without_rag.csv
results/attempt 1/: rag_combined_results_llama_without_rag.csv
results/attempt 2/: results_gpt_oss_with_rag.csv  results_llama_without_rag.csv
src/: config.py  embedder.py  eval_cli.py  eval_defaults.py  eval_generation.py  eval_io.py  eval_metrics.py  evaluator.py  generator.py  loader.py  rag_pipeline.py  retriever.py  vector_store.py
