[project]
name = "ragframework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "bitsandbytes==0.46.1",
    "datasets>=4.1.1",
    "hf-xet>=1.2.0",
    "langchain-ollama>=0.3.10",
    "matplotlib==3.10.5",
    "numpy==2.3.2",
    "pandas==2.2.3",
    "pip>=25.3",
    "pymupdf==1.26.3",
    "qdrant-client==1.15.1",
    "ragas>=0.3.8",
    "reportlab>=4.4.9",
    "requests==2.32.3",
    "sentence-transformers==5.0.0",
    "spacy==3.8.7",
    "torch>=2.9.0",
    "tqdm==4.67.1",
    "transformers>=4.54.1",
    "wheel==0.45.1",
]
